Add SkyBlock Garden endpoint /v2/skyblock/garden
